--- a/iOS Assignment1/Podfile
+++ b/iOS Assignment1/Podfile
@@ -5,6 +5,7 @@ target 'iOS Assignment1' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
 pod 'SDWebImage'
+pod 'ReachabilitySwift'
   # Pods for iOS Assignment1
 
   target 'iOS Assignment1Tests' do
